--- a/Game/client/index.html
+++ b/Game/client/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Quintus 2D MMO</title>
-    <script type="text/javascript" src="lib/quintus/quintus.all.min.js"></script>
-</head>
-<body>
-</body>
+    <head>
+        <title>Quintus 2D MMO</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <script type="text/javascript" src="lib/quintus/quintus.all.min.js"></script>
+        <script type="text/javascript" src="game.js"></script>
+    </head>
+    <body>
+        <header>
+            <h1>Battle of Squares</h1>
+        </header>
+        <div class="wrapper">
+            <div class="game-canvas-wrapper">
+                <canvas id="game" width="1200" height="640"></canvas>
+            </div>
+        </div>
+    </body>
 </html>
