--- a/Game/client/index.html
+++ b/Game/client/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quintus 2D MMO</title>
+        <title>Death match</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="lib/quintus/quintus.all.min.js"></script>
+        <script type="text/javascript" src="lib/socket.io/socket.io.min.js"></script>
         <script type="text/javascript" src="game.js"></script>
     </head>
     <body>
         <header>
-            <h1>Battle of Squares</h1>
+            <h1>Death match</h1>
         </header>
         <div class="wrapper">
             <div class="game-canvas-wrapper">
